--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family:'Century Gothic','Futura',san-serif;
+}
+.container
+{
+  max-width: 1000px;
+  margin: 0 auto;
+}
+ul
+{
+  list-style: none;
+}
+.thumbnail-profile
+{
+  align-items: center;
+  border: 0.5px #b2c2d6 solid;
+  border-radius: 10px;
+  margin-bottom: 0.89rem;
+  padding: 10px;
+}
+.thumbnail-profile:hover
+{
+  background-color: #b2c2d6;
+  border: 1px #729ed4 solid;
+}
+.thumbnail-icon
+{
+  margin: 0 20px;
+  border-radius: 50%;
+  height: 60px;
+  width: 60px;
+  display: inline-block;
+  vertical-align: middle;
+}
+.name-placeholder
+{
+  display: inline-block;
+}
+@media screen and (max-width: 360px) {
+  .container {
+    min-width: 340px;
+    margin: 0 auto;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
